fixed little square for Gap analysis legend

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -879,6 +879,9 @@ div.right {
 .map_container .layers div.show ul li.enabled span.color.KBA {
   background: url("sprite.png") no-repeat -224px -2462px;
 }
+.map_container .layers div.show ul li.enabled span.color.Gap_Analysis {
+  background: url("sprite.png") no-repeat -224px -2513px;
+}
 /* line 344, ../../css_src/partials/_map.scss */
 .map_container .layers div.show ul li.last {
   border: none;
